# tech

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml
blogoverride/: blog-custom.html
blogs/: index.html
blogs/arduino-nano/: index.html
blogs/arduino-uno/: index.html
blogs/python/: index.html
blogs/raspberry-pi-pico/: index.html
blogs/tech/: index.html
docs/: CNAME  blogs.md  cname  index.md  projects.md  stem.md
docs/blogs/: arduino-nano.md  arduino-uno.md  python.md  raspberry-pi-pico.md  tech.md
docs/draft/: aws_server.md
docs/python/: data_types.md  identifiers.md  installation.md  operators.md  syllabus.md
docs/stem/: circuit_ranger.md
docs/tailwindcss/: forms.md  index.md
draft/Beyond input(): Modern Python Techniques for Bulletproof User Validation/: index.html
draft/aws_server/: index.html
includes/: abbreviations.md  arduino-link-cta.md  nano-craft-cta.md  pico-disk-link-cta.md  pico-iot-cta.md  uno-edge-cta.md
projects/: index.html
projects/iot-based-humidity-and-temperature-monitoring-using-thingspeak-platform/: index.html
python/builtin_methods/: index.html
python/data_types/: index.html
python/identifiers/: index.html
python/installation/: index.html
python/operators/: index.html
python/syllabus/: index.html
search/: search_index.json
stem/: index.html
stem/circuit_ranger/: index.html
stylesheets/: extra.css
tags/: index.html
tailwindcss/: index.html
tailwindcss/forms/: index.html
templates/: main.html  robots.txt  sitemap.xml
(+93 files in other folders)
