[project]
name = "tech"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aavishkarah", email = "aavishkarah@proton.me" }
]
dependencies = [
    "mkdocs-material>=9.6.11",
    "mkdocs-blogging-plugin>=2.2.11",
    "mkdocs-video>=1.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
serve = "mkdocs serve -a 127.0.0.1:8000"
servel = "mkdocs serve -a 192.168.1.13:8000"
deploy = "mkdocs gh-deploy"
